Applications of Stack Completed
Applications of Stack have been done. This includes Switchbox Routing & Conversion to Binary Numbers.

Future Updates :

a) Stack using Pointers/Linked List(LL) as Base Class
b) Stack using LL as inheritance

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(Stack)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES Stack.cpp Stack.h StackByInheritence.cpp StackByInheritence.h LinearList.h SwitBoxApplication.cpp)
+set(SOURCE_FILES Stack.cpp Stack.h StackByInheritence.cpp StackByInheritence.h LinearList.h SwitBoxApplication.cpp binaryNumberConversion.cpp)
 add_executable(Stack ${SOURCE_FILES} SwitBoxApplication.cpp)
